[metadata]
name = cellment
description = "Segmentation of cells from fluorescence microscopy"
url = "https://github.com/maurosilber/cellment"
author = "Mauro Silberberg"
author_email = "maurosilber@gmail.com"
license = "MIT"
long_description = file: README.rst
keywords = background, segmentation, tracking, cell, fluorescence, microscopy, imaging
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = cellment
include_package_data = True
install_requires =
    numpy
    scipy
    networkx
    scikit-image
    more_itertools

[options.extras_require]
dev = pre-commit

[bdist_wheel]
universal = 1

[flake8]
ignore = E501  # line too long  